[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/weapon_projectiles/rocket/rocket.gd" type="Script" id=1]
[ext_resource path="res://assets/temp_assets/rocket_mesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/temp_assets/explosive.png" type="Texture" id=3]

[sub_resource type="SphereShape" id=1]
radius = 10.0

[sub_resource type="CylinderShape" id=2]
height = 1.0
radius = 0.2

[sub_resource type="SphereMesh" id=8]
radius = 7.0
height = 14.0
radial_segments = 10
rings = 5

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 0.866667, 0.45098, 0.45098, 0 )
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 0.98, 0.527, 1 )

[sub_resource type="Animation" id=10]
resource_name = "explode"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("explosive_mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.3, 0.3, 0.3 ), Vector3( 1, 1, 1 ), Vector3( 1.1, 1.1, 1.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosive_mesh:material/0:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 11.3137 ),
"update": 0,
"values": [ Color( 0.866667, 0.45098, 0.45098, 1 ), Color( 0.866667, 0.45098, 0.45098, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OmniLight:omni_range")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 7.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OmniLight:light_energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.07, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 200.0, 0.0 ]
}

[node name="rocket" type="KinematicBody"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="explosion_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="explosion_area"]
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -4.37114e-08, 7.1215e-15, 0, 0, 0 )
shape = SubResource( 2 )

[node name="death_timer" type="Timer" parent="."]

[node name="explosive_mesh" type="MeshInstance" parent="."]
transform = Transform( 1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="rocket_mesh" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="explosion_player" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 10 )

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 0.976471, 0.109804, 0.0705882, 1 )
light_energy = 0.0
omni_range = 7.0

[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
